# FastFunctionSecretSharing

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmark/: ExpressionEvaluator.hpp  README.md  log-grotto_lut_ex.txt  log-grotto_lut_ex2.txt
benchmark/cuda/: grotto_lut_ex.cu  grotto_lut_ex2.cu
include/FastFss/: api.h  dcf.h  dpf.h  errors.h  grotto.h  mic.h  ottt.h  spline.h
include/FastFss/cpu/: config.h  dcf.h  dpf.h  grotto.h  mic.h  onehot.h  ottt.h  prng.h  spline.h
include/FastFss/cuda/: config.h  dcf.h  dpf.h  grotto.h  mic.h  onehot.h  ottt.h  prng.h  spline.h
include/FastFssPP/: config.h  dcf.h  dpf.h  grotto.h  mic.h  ottt.h  prng.h  spline.h
lib/: approx_exp.py  approx_max.py
lib/torch_extension/: .gitignore  README.md  setup.py
lib/torch_extension/examples/: dcf_mic.py  dpf_eval_multi.py  dpf_multi.py  grotto_eq_multi.py  grotto_eval_eq_multi.py  grotto_interval_lut.py  grotto_lut.py  grotto_lut_ex.py  grotto_lut_ex2.py  grotto_mic.py  wideint_mic.py
lib/torch_extension/pyFastFss/: __init__.py
lib/torch_extension/pyFastFss/csrc/: bind_config.cpp  bind_dcf.cpp  bind_dcf_mic.cpp  bind_dpf.cpp  bind_grotto.cpp  bind_ottt.cpp  bind_prng.cpp  bind_spline.cpp  pyFastFss.cpp  pyFastFss.h  pyFastPrng.cpp  pyFastPrng.h
lib/torch_extension/pyFastFss/csrc/dcf/: dcf.cpp  dcf.h  dcf_cpu.cpp  dcf_cpu.h  dcf_cuda.cu  dcf_cuda.h
lib/torch_extension/pyFastFss/csrc/dpf/: dpf.cpp  dpf.h  dpf_cpu.cpp  dpf_cpu.h  dpf_cuda.cu  dpf_cuda.h
lib/torch_extension/pyFastFss/csrc/grotto/: grotto.cpp  grotto.h  grotto_cpu.cpp  grotto_cpu.h  grotto_cuda.cu  grotto_cuda.h
lib/torch_extension/pyFastFss/csrc/mic/: mic.cpp  mic.h  mic_cpu.cpp  mic_cpu.h  mic_cuda.cu  mic_cuda.h
lib/torch_extension/pyFastFss/csrc/ottt/: ottt.cpp  ottt.h  ottt_cpu.cpp  ottt_cpu.h  ottt_cuda.cu  ottt_cuda.h
lib/torch_extension/pyFastFss/csrc/spline/: spline.cpp  spline.h  spline_cpu.cpp  spline_cpu.h  spline_cuda.cu  spline_cuda.h
lib/torch_extension/pyFastFss/src/: bind_dcf.cpp  bind_dcf_mic.cpp  bind_dpf.cpp  bind_grotto.cpp  bind_ottt.cpp  bind_prng.cpp  pyFastDcf.cpp  pyFastDcf.h  pyFastDcfMIC.cpp  pyFastDcfMIC.h  pyFastDpf.cpp  pyFastDpf.h  pyFastFss.cpp  pyFastFss.h  pyFastGrotto.cpp  pyFastGrotto.h  pyFastOnehot.cpp  pyFastOnehot.h  pyFastOttt.cpp  pyFastOttt.h  pyFastPrng.cpp  pyFastPrng.h  pyFastTensorUtils.h
lib/torch_extension/test/: dcf.py  mic.py
src/: dcf.cpp  dpf.cpp  grotto.cpp  mic.cpp  ottt.cpp  spline.cpp
src/cpu/: aes.hpp  config.cpp  dcf.cpp  dcf.hpp  dpf.cpp  grotto.cpp  grotto.hpp  mic.cpp  mic.hpp  mod.hpp  number.hpp  onehot.cpp  ottt.cpp  prng.cpp  spline.cpp
src/cuda/: aes.cuh  config.cpp  dcf.cu  dcf.cuh  dpf.cu  grotto.cu  grotto.cuh  mic.cu  mic.cuh  mod.cuh  number.cuh  onehot.cu  ottt.cu  prng.cu  spline.cu
src/cuda/grotto/: def.cuh  eq.cuh  eqMulti.cuh  eval.cuh  evalEq.cuh  evalEqMulti.cuh  itervalLut.cuh  keyGen.cuh  lut.cuh  lut_ex.cuh  mic.cuh
src/helper/: dcf_helper.h  dpf_helper.h  error_code.h  grotto_helper.h  mic_helper.h  onehot_helper.h  ottt_helper.h
src/impl/: aes.h  aesni.h  dcf.h  def.h  dpf.h  grotto.h  mic.h  number.h  onehot.h  ottt.h  spline.h  uint128_t.h
src/kernel/: dcf.h  dpf.h  grotto.h  mic.h  ottt.h  parallel_execute.h  spline.h
test/: build_unix.sh
test/cpu/: aes.cpp  dcf.cpp  dpf.cpp  grotto.cpp  mic.cpp  onehot.cpp  ottt.cpp  prng.cpp
test/cpu/dpf/: TestDpfEval.hpp  TestDpfEvalAll.hpp  TestDpfMultiEval.hpp
test/cpu/grotto/: TestGrotto.hpp  TestGrottoEq.hpp  TestGrottoEqEval.hpp  TestGrottoEqMulti.hpp  TestGrottoEqMultiEval.hpp  TestGrottoEval.hpp  TestGrottoEvalAllLut.hpp  TestGrottoLutEval.hpp  TestGrottoLutEval_ex.hpp  TestGrottoLutEval_ex2.hpp  TestGrottoLut_ex.hpp  TestGrottoLut_ex2.hpp  TestGrottoMIC.hpp  TestGrottoMICEval.hpp
test/cuda/: aes.cu  dcf.cu  dpf.cu  grotto.cu  mic.cu  mt19937.hpp  onehot.cu  ottt.cu  prng.cu  uint128_t.h  utils.cuh
test/cuda/dpf/: TestDpfEval.cuh  TestDpfEvalAll.cuh  TestDpfMultiEval.cuh
test/cuda/grotto/: TestGrottoEqMulti.cuh  TestGrottoLut.cuh  TestGrottoLut_ex.cuh  TestGrottoLut_ex2.cuh
tests/: CMakeLists.txt
tests/common/: cuda_test_utils.cuh  nbit_signed.hpp  test_types.hpp  test_utils.hpp
tests/cpu/dcf/: cpu_dcf_eval.cpp
tests/cpu/dpf/: cpu_dpf_eval.cpp  cpu_dpf_eval_all.cpp  cpu_dpf_eval_multi.cpp
tests/cpu/grotto/: cpu_grotto_eq_eval.cpp  cpu_grotto_eval.cpp  cpu_grotto_interval_lut_eval.cpp  cpu_grotto_mic_eval.cpp
tests/cpu/mic/: cpu_mic_eval.cpp
tests/cpu/ottt/: cpu_ottt_lut_eval.cpp
tests/cuda/dcf/: cuda_dcf_eval.cu
tests/cuda/dpf/: cuda_dpf_eval.cu  cuda_dpf_eval_all.cu  cuda_dpf_eval_multi.cu
tests/cuda/grotto/: cuda_grotto_eq_eval.cu  cuda_grotto_eval.cu  cuda_grotto_interval_lut_eval.cu  cuda_grotto_mic_eval.cu
tests/cuda/mic/: cuda_mic_eval.cu
tests/cuda/ottt/: cuda_ottt_lut_eval.cu
tests/dcf/: dcf_eval_cpu.cpp  dcf_eval_cuda.cu  dcf_eval_test_case.h
tests/dpf/: dpf_eval_all_case.h  dpf_eval_all_cpu.cpp  dpf_eval_all_cuda.cu  dpf_eval_case.h  dpf_eval_cpu.cpp  dpf_eval_cuda.cu  dpf_eval_multi_case.h  dpf_eval_multi_cpu.cpp  dpf_eval_multi_cuda.cu
tests/grotto/: grotto_eq_eval_cpu.cpp  grotto_eq_eval_cuda.cu  grotto_eq_eval_test_case.h  grotto_eval_cpu.cpp  grotto_eval_cuda.cu  grotto_eval_test_case.h  grotto_interval_lut_eval_cpu.cpp  grotto_interval_lut_eval_cuda.cu  grotto_interval_lut_eval_test_case.h  grotto_mic_eval_cpu.cpp  grotto_mic_eval_cuda.cu  grotto_mic_eval_test_case.h
tests/mic/: mic_eval_cpu.cpp  mic_eval_cuda.cu  mic_eval_test_case.h
tests/ottt/: ottt_eval_cpu.cpp  ottt_eval_cuda.cu  ottt_lut_eval_case.h
tests/spline/: spline_eval_cpu.cpp  spline_eval_cuda.cu  spline_eval_test_case.h
